# MYSTRAN-bandit

./: CMakeLists.txt  w.bat
.github/workflows/: cmake.yml
Source/INCLUDE/: BANDIT_BLOCK_DATA.fi
Source/MAIN/: MYSTRAN.f90
Source/Modules/: PARAMS.f90
Source/Modules/BANDIT/: BANDIT_MODULE.f
